# cpp-multilayerperceptron

./: CMakeLists.txt  LICENSE  MultilayerPerceptron.cc  MultilayerPerceptron.h  README.md
demo/: CMakeLists.txt  datatypes.h  main.cc
src/: MultilayerPerceptron.cc  main.cc
